# add_subdirectory(helloworld)
# add_subdirectory(firstapp)
# add_subdirectory(tictactoe)
# add_subdirectory(sierpinski)
# add_subdirectory(coloredtriangles)
# add_subdirectory(connect4)
# add_subdirectory(regularpolygons)
# add_subdirectory(loadmodel)
# add_subdirectory(lookat)
# add_subdirectory(viewer1)
# add_subdirectory(starfield)
add_subdirectory(orbitas)